Makefile: Fixups for go generation code
Signed-off-by: Naadir Jeewa <jeewan@vmware.com>

--- a/hack/tools/Makefile
+++ b/hack/tools/Makefile
@@ -53,6 +53,7 @@ YQ                 := $(BIN_DIR)/yq
 TRIVY              := $(BIN_DIR)/trivy
 KAPP               := $(BIN_DIR)/kapp
 CONVERSION_GEN     := $(BIN_DIR)/conversion-gen
+COUNTERFEITER      := $(BIN_DIR)/counterfeiter
 
 ## --------------------------------------
 ## Help
@@ -74,7 +75,7 @@ $(GINKGO): go.mod
 	mkdir -p $(BIN_DIR)
 	go build -tags=tools -o $(BIN_DIR)/ginkgo github.com/onsi/ginkgo/ginkgo
 
-COUNTERFEITER := $(BIN_DIR)/counterfeiter
+counterfeiter: $(COUNTERFEITER)
 $(COUNTERFEITER): $(BIN_DIR) go.mod go.sum
 	go build -tags=tools -o $@ github.com/maxbrunsfeld/counterfeiter/v6
 
