Workflows: Remove old go dependency grabbing
Use go mod download instead

Signed-off-by: Naadir Jeewa <jeewan@vmware.com>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -48,12 +48,7 @@ jobs:
           ${{ runner.os }}-node-
 
     - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
+      run: go mod download
 
     - name: Extract PR Number
       uses: Dovyski/payload-info-action@master
