--- a/.github/workflows/tkgpackage_integration_test.yaml
+++ b/.github/workflows/tkgpackage_integration_test.yaml
@@ -49,12 +49,7 @@ jobs:
             ${{ runner.os }}-go-
 
       - name: Get dependencies
-        run: |
-          go get -v -t -d ./...
-          if [ -f Gopkg.toml ]; then
-              curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-              dep ensure
-          fi
+        run: go mod download
 
       - name: Build Tools
         run: make tools
